<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/background_app"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewTitle_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewCamp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTitle_1"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/etPassword_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />
            <EditText
                android:id="@+id/etPassword_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:indeterminate="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/viewCamp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="50dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:layout_margin="10dp"/>

        <!-- Botón agregado para regresar al LogIn -->
        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>