<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".LogInActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pur"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="35dp"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTitle"
        app:layout_constraintBottom_toTopOf="@id/viewLogIn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewLogIn"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/logIn"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewRegister"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>